@@ -24,6 +24,7 @@
 * Добавлены команды чата /luafile и /lua (см. man-страницу или /help в чате).
 * Добавлен виджет для настройки ADL-поиска.
 * Интервал обнаружения отсутствия (проверка активности пользователя).
+* Изменены функции работы со смайлами. Теперь возможно использовать оригинальные смайл-паки от других клиентов без дополнительной модификации. Поставляемые в комплекте с программой смайл-паки, являются общими для для интерфейсов на Qt и Gtk.
 *** eiskaltdcpp-gtk ***
 * Добавлен Gtk интерфейс, основанный на коде FreeDC++ и LinuxDC++.
 * Интерфейс локализирован с использованием gettext.
