@@ -24,6 +24,7 @@
 * Додано команди чату /luafile i /lua (див. man-сторінку або /help в чаті).
 * Доданий віджет для налаштування ADL-пошуку.
 * Інтервал виявлення відсутності (перевірка активності користувача).
+* Змінено функції роботи зі смайлами. Тепер можливо використовувати оригінальні смайл-паки від інших клієнтів без додаткової модифікації. Cмайл-паки, що поставляються в комплекті з програмою, є загальними для для інтерфейсів на Qt та Gtk.
 *** eiskaltdcpp-gtk ***
 * Доданий Gtk інтерфейс, заснований на коді FreeDC++ і LinuxDC++.
 * Інтерфейс локалізований з використанням gettext.
